--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,6 @@
 <div class="links scroll">
         <a href="{{site.baseurl}}/">Home</a>
+        <a href="{{site.baseurl}}/projects/">Projects</a>
         <a href="{{site.baseurl}}/assets/docs/CV-Muhammad_Dorrabb_Khan_Niazi.pdf">CV 🇬🇧</a>
         <a href="{{site.baseurl}}/assets/docs/CV-Muhammad_Dorrabb_Khan_Niazi_DE.pdf">CV 🇩🇪</a>
 </div>
