--- a/_layouts/clean.html
+++ b/_layouts/clean.html
@@ -2,21 +2,24 @@
 # layout: compress
 ---
 <!DOCTYPE html>
-<html>
+<html data-theme="dark">
 
     <head>
         <meta charset="utf-8">
         <meta content="width=device-width, initial-scale=1" name="viewport">
-        <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css">
 
         {% seo %}
 
         {% include favicon.html %}
 
+        <link rel="stylesheet" href="{{site.baseurl}}/assets/css/main.css">
+
         {% include mathjax.html %}
 
         <!-- Load fontawesome here for faster loadtimes: https://stackoverflow.com/a/35880730/9523246 -->
         <script type="text/javascript"> (function() { var css = document.createElement('link'); css.href = 'https://use.fontawesome.com/releases/v6.7.2/css/all.css'; css.rel = 'stylesheet'; css.type = 'text/css'; document.getElementsByTagName('head')[0].appendChild(css); })(); </script>
+
+        <script src="{{site.baseurl}}/assets/js/theme-switcher.js"></script>
 
     </head>
 
@@ -34,6 +37,8 @@
           </p>
 
         {% include social-footer.html %}
+
+        <button id="theme-toggle" aria-label="Toggle light and dark mode">☀️</button>
 
         </footer>
 
