--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 # layout: compress
 ---
 <!DOCTYPE html>
-<html>
+<html data-theme="dark">
 
     <head>
         <meta charset="utf-8">
@@ -14,6 +14,7 @@
 
         {% include navigation.html %}
 
+
         {% seo %}
 
         {% include favicon.html %}
@@ -22,6 +23,8 @@
 
         <!-- Load fontawesome here for faster loadtimes: https://stackoverflow.com/a/35880730/9523246 -->
         <script type="text/javascript"> (function() { var css = document.createElement('link'); css.href = 'https://use.fontawesome.com/releases/v6.7.2/css/all.css'; css.rel = 'stylesheet'; css.type = 'text/css'; document.getElementsByTagName('head')[0].appendChild(css); })(); </script>
+
+        <script src="{{site.baseurl}}/assets/js/theme-switcher.js"></script>
 
     </head>
 
@@ -39,6 +42,8 @@
           </p>
 
         {% include social-footer.html %}
+
+        <button id="theme-toggle" aria-label="Toggle light and dark mode">☀️</button>
 
         </footer>
 
