--- a/assets/css/_sass/projects.scss
+++ b/assets/css/_sass/projects.scss
@@ -17,13 +17,14 @@
   flex: 1 0 200px;
   border-radius: 15px;
   background: $projectbox;
-  @media (prefers-color-scheme: dark) {
-    background: $projectbox-dark;
-  }
   height: 200px;
   width: 100%;
   overflow: hidden;
   display: table;
+}
+
+[data-theme="dark"] .projectTile {
+  background: $projectbox-dark;
 }
 
 .projectTile a {
