--- a/assets/css/_sass/style.scss
+++ b/assets/css/_sass/style.scss
@@ -13,11 +13,12 @@ body {
   padding: 2em 1em;
   text-rendering: optimizeLegibility;
   height: 100%;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
 
-  @media (prefers-color-scheme: dark) {
-    background-color: $body-bg-dark;
-    color: $text-color-dark;
-  }
+[data-theme="dark"] body {
+  background-color: $body-bg-dark;
+  color: $text-color-dark;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -34,15 +35,12 @@ a {
   text-decoration: none;
   &:hover{
     color: $text-color;
-
-    @media (prefers-color-scheme: dark) {
-      color: $text-color-dark;
-    }
-
   }
 }
 
-
+[data-theme="dark"] a:hover {
+  color: $text-color-dark;
+}
 
 p a {
   color: $text-color;
@@ -64,10 +62,10 @@ p a {
     box-shadow: inset 0 -100px 0 0 lighten($brand-color, 10%);
 
   }
+}
 
-  @media (prefers-color-scheme: dark) {
-    color: $text-color-dark;
-  }
+[data-theme="dark"] p a {
+  color: $text-color-dark;
 }
 
 
